	Fixed slapd runqueue use of freed memory (ITS#4517)
	Added slapd syncrepl mandatory searchbase check
	Fixed slapo-accesslog bugs
	Added slapo-accesslog oldReq feature
	Fixed slapo ppolicy BER tags
	Fixed slapo-auditlog missing return codes
	Fixed slurpd potential overflow issue
	Fixed slapo-translucent modifications
	Fixed libldap_r thread debug missing break
	Fixed libldap_r tpool cleanup

OpenLDAP 2.3.21 Release
	Fixed libldap referral chasing issue (ITS#4448)
	Fixed libldap invalid free bug (ITS#4436)
	Fixed libldap mutex leak (ITS#4441)
	Fixed libldap_r thr_yield(2) return handling (ITS#4469)
	Fixed slapd syncprov/glue interaction issue (ITS#4323, ITS#4417)
	Fixed slapd operational attrs in presence of global overlays (ITS#4431)
	Fixed slapd "threads" config value checking (ITS#4433)
	Fixed slapd connection index bound check (ITS#4449)
	Fixed slapd connection cleanup (ITS#4465)
	Fixed slapd slap_realloc misuse (ITS#4477)
	Fixed slapd size limit check when pagesize=1 (ITS#4479)
	Fixed slapd-bdb/hdb cache issue (ITS#4439)
	Fixed slapd-ldbm crash on modify bug (ITS#4464)
	Fixed slapd-ldap potential bind deadlock (ITS#4409)
	Fixed slapd-ldap/meta conn expiration concurrency (ITS#4429)
	Fixed slapd-ldap failed bind connection trashing (ITS#4428)
	Fixed slapd-ldap/meta chase-referrals disabling (ITS#4447)
	Fixed slapd-ldap controls forwarding (ITS#4457)
	Fixed slapd-ldap pretty DN in proxied requests (ITS#4456)
	Fixed slapd-ldbm crash on modify bug (ITS#4464)
	Fixed slapd-meta write error mapping (ITS#4419)
	Removed lint
	Build Environment
		Added slapo-auditlog build support (ITS#4372)
		Fixed multi-precision sizeof detection (ITS#4416)
		Fixed liblunicode build (ITS#4435)
		Updated libtool to version 1.5.22 (ITS#4471)
		Updated shtool to version 2.0.5

OpenLDAP 2.3.20 Release
	Added libldap SASL workaround for broken LDAP servers (ITS#4391)
	Fixed libldap/slapd valuesReturnFilter OID (ITS#4404)
	Fixed slapd config_generic_wrapper missing parameter bug (ITS#4376)